build/bison.output
State 4 conflicts: 1 shift/reduce
State 52 conflicts: 10 reduce/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 lista_declaracoes lista_comandos

    3 lista_declaracoes: ε
    4                  | lista_declaracoes declaracao

    5 lista_comandos: ε
    6               | lista_comandos comando

    7 declaracao: declaracao_variavel
    8           | declaracao_funcao

    9 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
   10                    | DECL_CREATE tipo IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

   11 $@2: ε

   12 $@3: ε

   13 declaracao_funcao: DECL_FUNCTION tipo IDENTIFIER $@2 DELIM_PAREN_OPEN parametros $@3 DELIM_PAREN_CLOSE bloco

   14 parametros: ε
   15           | lista_parametros

   16 lista_parametros: parametro
   17                 | lista_parametros DELIM_SEPARATOR parametro

   18 parametro: tipo IDENTIFIER

   19 tipo: TYPE_INT
   20     | TYPE_FLT
   21     | TYPE_CHR
   22     | TYPE_STR
   23     | TYPE_VOID

   24 comando: comando_check
   25        | comando_repeat
   26        | atribuicao DELIM_END_STATEMENT
   27        | chamada_funcao DELIM_END_STATEMENT
   28        | comando_give
   29        | declaracao_variavel

   30 comando_check: CTRL_CHECK DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   31              | CTRL_CHECK DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

   32 comando_repeat: CTRL_REPEAT CTRL_WHILE DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

   33 comando_give: CTRL_GIVE CTRL_BACK expressao DELIM_END_STATEMENT
   34             | CTRL_GIVE CTRL_BACK DELIM_END_STATEMENT

   35 bloco: DELIM_BLOCK_OPEN lista_comandos DELIM_BLOCK_CLOSE

   36 atribuicao: IDENTIFIER OP_ASSIGN expressao
   37           | IDENTIFIER DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE OP_ASSIGN expressao
   38           | IDENTIFIER OP_ADD_ASSIGN expressao

   39 expressao: termo
   40          | LITERAL_STR
   41          | expressao OP_ADD termo
   42          | expressao OP_SUB termo
   43          | expressao OP_GT termo
   44          | expressao OP_LT termo
   45          | expressao OP_EQ termo
   46          | expressao OP_NE termo

   47 termo: fator
   48      | termo OP_MUL fator
   49      | termo OP_DIV fator

   50 fator: IDENTIFIER
   51      | IDENTIFIER DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE
   52      | LITERAL_INT
   53      | LITERAL_FLT
   54      | LITERAL_CHR
   55      | LITERAL_STR
   56      | DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE
   57      | IDENTIFIER DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

   58 chamada_funcao: IDENTIFIER DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE
   59               | "print" DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE
   60               | "scan" DELIM_PAREN_OPEN acesso_variavel DELIM_PAREN_CLOSE

   61 acesso_variavel: IDENTIFIER
   62                | IDENTIFIER DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE

   63 argumentos: ε
   64           | lista_argumentos

   65 lista_argumentos: expressao
   66                 | lista_argumentos DELIM_SEPARATOR expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <id> (258) 9 10 13 18 36 37 38 50 51 57 58 61 62
    TYPE_INT <tipo> (259) 19
    TYPE_FLT <tipo> (260) 20
    TYPE_CHR <tipo> (261) 21
    TYPE_STR <tipo> (262) 22
    TYPE_VOID <tipo> (263) 23
    DECL_CREATE (264) 9 10
    DECL_AS (265) 9 10
    DECL_ARRAY (266) 10
    DECL_FUNCTION (267) 13
    CTRL_CHECK (268) 30 31
    CTRL_THEN (269) 30 31
    CTRL_OTHERWISE (270) 31
    CTRL_REPEAT (271) 32
    CTRL_WHILE (272) 32
    CTRL_GIVE (273) 33 34
    CTRL_BACK (274) 33 34
    OP_ADD (275) 41
    OP_SUB (276) 42
    OP_MUL (277) 48
    OP_DIV (278) 49
    OP_ASSIGN (279) 36 37
    OP_ADD_ASSIGN (280) 38
    OP_EQ (281) 45
    OP_NE (282) 46
    OP_LT (283) 44
    OP_GT (284) 43
    DELIM_PAREN_OPEN (285) 13 30 31 32 56 57 58 59 60
    DELIM_PAREN_CLOSE (286) 13 30 31 32 56 57 58 59 60
    DELIM_BRACKET_OPEN (287) 10 37 51 62
    DELIM_BRACKET_CLOSE (288) 10 37 51 62
    DELIM_BLOCK_OPEN (289) 35
    DELIM_BLOCK_CLOSE (290) 35
    DELIM_END_STATEMENT (291) 9 10 26 27 33 34
    DELIM_SEPARATOR (292) 17 66
    LITERAL_INT <literal> (293) 10 52
    LITERAL_FLT <literal> (294) 53
    LITERAL_CHR <literal> (295) 54
    LITERAL_STR <literal> (296) 40 55
    "print" (297) 59
    "scan" (298) 60


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    programa (45)
        on left: 2
        on right: 0
    $@1 (46)
        on left: 1
        on right: 2
    lista_declaracoes (47)
        on left: 3 4
        on right: 2 4
    lista_comandos (48)
        on left: 5 6
        on right: 2 6 35
    declaracao (49)
        on left: 7 8
        on right: 4
    declaracao_variavel (50)
        on left: 9 10
        on right: 7 29
    declaracao_funcao (51)
        on left: 13
        on right: 8
    $@2 (52)
        on left: 11
        on right: 13
    $@3 (53)
        on left: 12
        on right: 13
    parametros (54)
        on left: 14 15
        on right: 13
    lista_parametros (55)
        on left: 16 17
        on right: 15 17
    parametro (56)
        on left: 18
        on right: 16 17
    tipo <tipo> (57)
        on left: 19 20 21 22 23
        on right: 9 10 13 18
    comando (58)
        on left: 24 25 26 27 28 29
        on right: 6
    comando_check (59)
        on left: 30 31
        on right: 24
    comando_repeat (60)
        on left: 32
        on right: 25
    comando_give (61)
        on left: 33 34
        on right: 28
    bloco (62)
        on left: 35
        on right: 13 30 31 32
    atribuicao (63)
        on left: 36 37 38
        on right: 26
    expressao <tipo> (64)
        on left: 39 40 41 42 43 44 45 46
        on right: 9 30 31 32 33 36 37 38 41 42 43 44 45 46 51 56 59 62 65 66
    termo <tipo> (65)
        on left: 47 48 49
        on right: 39 41 42 43 44 45 46 48 49
    fator <tipo> (66)
        on left: 50 51 52 53 54 55 56 57
        on right: 47 48 49
    chamada_funcao <tipo> (67)
        on left: 58 59 60
        on right: 27
    acesso_variavel <id> (68)
        on left: 61 62
        on right: 60
    argumentos (69)
        on left: 63 64
        on right: 57 58
    lista_argumentos (70)
        on left: 65 66
        on right: 64 66


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • lista_declaracoes lista_comandos

    $default  reduce using rule 3 (lista_declaracoes)

    lista_declaracoes  go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 lista_declaracoes • lista_comandos
    4 lista_declaracoes: lista_declaracoes • declaracao

    DECL_CREATE    shift, and go to state 5
    DECL_FUNCTION  shift, and go to state 6

    DECL_CREATE  [reduce using rule 5 (lista_comandos)]
    $default     reduce using rule 5 (lista_comandos)

    lista_comandos       go to state 7
    declaracao           go to state 8
    declaracao_variavel  go to state 9
    declaracao_funcao    go to state 10


State 5

    9 declaracao_variavel: DECL_CREATE • tipo IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
   10                    | DECL_CREATE • tipo IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    TYPE_INT   shift, and go to state 11
    TYPE_FLT   shift, and go to state 12
    TYPE_CHR   shift, and go to state 13
    TYPE_STR   shift, and go to state 14
    TYPE_VOID  shift, and go to state 15

    tipo  go to state 16


State 6

   13 declaracao_funcao: DECL_FUNCTION • tipo IDENTIFIER $@2 DELIM_PAREN_OPEN parametros $@3 DELIM_PAREN_CLOSE bloco

    TYPE_INT   shift, and go to state 11
    TYPE_FLT   shift, and go to state 12
    TYPE_CHR   shift, and go to state 13
    TYPE_STR   shift, and go to state 14
    TYPE_VOID  shift, and go to state 15

    tipo  go to state 17


State 7

    2 programa: $@1 lista_declaracoes lista_comandos •
    6 lista_comandos: lista_comandos • comando

    IDENTIFIER   shift, and go to state 18
    DECL_CREATE  shift, and go to state 5
    CTRL_CHECK   shift, and go to state 19
    CTRL_REPEAT  shift, and go to state 20
    CTRL_GIVE    shift, and go to state 21
    "print"      shift, and go to state 22
    "scan"       shift, and go to state 23

    $default  reduce using rule 2 (programa)

    declaracao_variavel  go to state 24
    comando              go to state 25
    comando_check        go to state 26
    comando_repeat       go to state 27
    comando_give         go to state 28
    atribuicao           go to state 29
    chamada_funcao       go to state 30


State 8

    4 lista_declaracoes: lista_declaracoes declaracao •

    $default  reduce using rule 4 (lista_declaracoes)


State 9

    7 declaracao: declaracao_variavel •

    $default  reduce using rule 7 (declaracao)


State 10

    8 declaracao: declaracao_funcao •

    $default  reduce using rule 8 (declaracao)


State 11

   19 tipo: TYPE_INT •

    $default  reduce using rule 19 (tipo)


State 12

   20 tipo: TYPE_FLT •

    $default  reduce using rule 20 (tipo)


State 13

   21 tipo: TYPE_CHR •

    $default  reduce using rule 21 (tipo)


State 14

   22 tipo: TYPE_STR •

    $default  reduce using rule 22 (tipo)


State 15

   23 tipo: TYPE_VOID •

    $default  reduce using rule 23 (tipo)


State 16

    9 declaracao_variavel: DECL_CREATE tipo • IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
   10                    | DECL_CREATE tipo • IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    IDENTIFIER  shift, and go to state 31


State 17

   13 declaracao_funcao: DECL_FUNCTION tipo • IDENTIFIER $@2 DELIM_PAREN_OPEN parametros $@3 DELIM_PAREN_CLOSE bloco

    IDENTIFIER  shift, and go to state 32


State 18

   36 atribuicao: IDENTIFIER • OP_ASSIGN expressao
   37           | IDENTIFIER • DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE OP_ASSIGN expressao
   38           | IDENTIFIER • OP_ADD_ASSIGN expressao
   58 chamada_funcao: IDENTIFIER • DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

    OP_ASSIGN           shift, and go to state 33
    OP_ADD_ASSIGN       shift, and go to state 34
    DELIM_PAREN_OPEN    shift, and go to state 35
    DELIM_BRACKET_OPEN  shift, and go to state 36


State 19

   30 comando_check: CTRL_CHECK • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   31              | CTRL_CHECK • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

    DELIM_PAREN_OPEN  shift, and go to state 37


State 20

   32 comando_repeat: CTRL_REPEAT • CTRL_WHILE DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

    CTRL_WHILE  shift, and go to state 38


State 21

   33 comando_give: CTRL_GIVE • CTRL_BACK expressao DELIM_END_STATEMENT
   34             | CTRL_GIVE • CTRL_BACK DELIM_END_STATEMENT

    CTRL_BACK  shift, and go to state 39


State 22

   59 chamada_funcao: "print" • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE

    DELIM_PAREN_OPEN  shift, and go to state 40


State 23

   60 chamada_funcao: "scan" • DELIM_PAREN_OPEN acesso_variavel DELIM_PAREN_CLOSE

    DELIM_PAREN_OPEN  shift, and go to state 41


State 24

   29 comando: declaracao_variavel •

    $default  reduce using rule 29 (comando)


State 25

    6 lista_comandos: lista_comandos comando •

    $default  reduce using rule 6 (lista_comandos)


State 26

   24 comando: comando_check •

    $default  reduce using rule 24 (comando)


State 27

   25 comando: comando_repeat •

    $default  reduce using rule 25 (comando)


State 28

   28 comando: comando_give •

    $default  reduce using rule 28 (comando)


State 29

   26 comando: atribuicao • DELIM_END_STATEMENT

    DELIM_END_STATEMENT  shift, and go to state 42


State 30

   27 comando: chamada_funcao • DELIM_END_STATEMENT

    DELIM_END_STATEMENT  shift, and go to state 43


State 31

    9 declaracao_variavel: DECL_CREATE tipo IDENTIFIER • DECL_AS expressao DELIM_END_STATEMENT
   10                    | DECL_CREATE tipo IDENTIFIER • DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    DECL_AS             shift, and go to state 44
    DELIM_BRACKET_OPEN  shift, and go to state 45


State 32

   13 declaracao_funcao: DECL_FUNCTION tipo IDENTIFIER • $@2 DELIM_PAREN_OPEN parametros $@3 DELIM_PAREN_CLOSE bloco

    $default  reduce using rule 11 ($@2)

    $@2  go to state 46


State 33

   36 atribuicao: IDENTIFIER OP_ASSIGN • expressao

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 53
    termo      go to state 54
    fator      go to state 55


State 34

   38 atribuicao: IDENTIFIER OP_ADD_ASSIGN • expressao

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 56
    termo      go to state 54
    fator      go to state 55


State 35

   58 chamada_funcao: IDENTIFIER DELIM_PAREN_OPEN • argumentos DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    $default  reduce using rule 63 (argumentos)

    expressao         go to state 57
    termo             go to state 54
    fator             go to state 55
    argumentos        go to state 58
    lista_argumentos  go to state 59


State 36

   37 atribuicao: IDENTIFIER DELIM_BRACKET_OPEN • expressao DELIM_BRACKET_CLOSE OP_ASSIGN expressao

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 60
    termo      go to state 54
    fator      go to state 55


State 37

   30 comando_check: CTRL_CHECK DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   31              | CTRL_CHECK DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 61
    termo      go to state 54
    fator      go to state 55


State 38

   32 comando_repeat: CTRL_REPEAT CTRL_WHILE • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

    DELIM_PAREN_OPEN  shift, and go to state 62


State 39

   33 comando_give: CTRL_GIVE CTRL_BACK • expressao DELIM_END_STATEMENT
   34             | CTRL_GIVE CTRL_BACK • DELIM_END_STATEMENT

    IDENTIFIER           shift, and go to state 47
    DELIM_PAREN_OPEN     shift, and go to state 48
    DELIM_END_STATEMENT  shift, and go to state 63
    LITERAL_INT          shift, and go to state 49
    LITERAL_FLT          shift, and go to state 50
    LITERAL_CHR          shift, and go to state 51
    LITERAL_STR          shift, and go to state 52

    expressao  go to state 64
    termo      go to state 54
    fator      go to state 55


State 40

   59 chamada_funcao: "print" DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 65
    termo      go to state 54
    fator      go to state 55


State 41

   60 chamada_funcao: "scan" DELIM_PAREN_OPEN • acesso_variavel DELIM_PAREN_CLOSE

    IDENTIFIER  shift, and go to state 66

    acesso_variavel  go to state 67


State 42

   26 comando: atribuicao DELIM_END_STATEMENT •

    $default  reduce using rule 26 (comando)


State 43

   27 comando: chamada_funcao DELIM_END_STATEMENT •

    $default  reduce using rule 27 (comando)


State 44

    9 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DECL_AS • expressao DELIM_END_STATEMENT

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 68
    termo      go to state 54
    fator      go to state 55


State 45

   10 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DELIM_BRACKET_OPEN • LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    LITERAL_INT  shift, and go to state 69


State 46

   13 declaracao_funcao: DECL_FUNCTION tipo IDENTIFIER $@2 • DELIM_PAREN_OPEN parametros $@3 DELIM_PAREN_CLOSE bloco

    DELIM_PAREN_OPEN  shift, and go to state 70


State 47

   50 fator: IDENTIFIER •
   51      | IDENTIFIER • DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE
   57      | IDENTIFIER • DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

    DELIM_PAREN_OPEN    shift, and go to state 71
    DELIM_BRACKET_OPEN  shift, and go to state 72

    $default  reduce using rule 50 (fator)


State 48

   56 fator: DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 73
    termo      go to state 54
    fator      go to state 55


State 49

   52 fator: LITERAL_INT •

    $default  reduce using rule 52 (fator)


State 50

   53 fator: LITERAL_FLT •

    $default  reduce using rule 53 (fator)


State 51

   54 fator: LITERAL_CHR •

    $default  reduce using rule 54 (fator)


State 52

   40 expressao: LITERAL_STR •
   55 fator: LITERAL_STR •

    OP_ADD               reduce using rule 40 (expressao)
    OP_ADD               [reduce using rule 55 (fator)]
    OP_SUB               reduce using rule 40 (expressao)
    OP_SUB               [reduce using rule 55 (fator)]
    OP_MUL               reduce using rule 55 (fator)
    OP_DIV               reduce using rule 55 (fator)
    OP_EQ                reduce using rule 40 (expressao)
    OP_EQ                [reduce using rule 55 (fator)]
    OP_NE                reduce using rule 40 (expressao)
    OP_NE                [reduce using rule 55 (fator)]
    OP_LT                reduce using rule 40 (expressao)
    OP_LT                [reduce using rule 55 (fator)]
    OP_GT                reduce using rule 40 (expressao)
    OP_GT                [reduce using rule 55 (fator)]
    DELIM_PAREN_CLOSE    reduce using rule 40 (expressao)
    DELIM_PAREN_CLOSE    [reduce using rule 55 (fator)]
    DELIM_BRACKET_CLOSE  reduce using rule 40 (expressao)
    DELIM_BRACKET_CLOSE  [reduce using rule 55 (fator)]
    DELIM_END_STATEMENT  reduce using rule 40 (expressao)
    DELIM_END_STATEMENT  [reduce using rule 55 (fator)]
    DELIM_SEPARATOR      reduce using rule 40 (expressao)
    DELIM_SEPARATOR      [reduce using rule 55 (fator)]
    $default             reduce using rule 40 (expressao)


State 53

   36 atribuicao: IDENTIFIER OP_ASSIGN expressao •
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD  shift, and go to state 74
    OP_SUB  shift, and go to state 75
    OP_EQ   shift, and go to state 76
    OP_NE   shift, and go to state 77
    OP_LT   shift, and go to state 78
    OP_GT   shift, and go to state 79

    $default  reduce using rule 36 (atribuicao)


State 54

   39 expressao: termo •
   48 termo: termo • OP_MUL fator
   49      | termo • OP_DIV fator

    OP_MUL  shift, and go to state 80
    OP_DIV  shift, and go to state 81

    $default  reduce using rule 39 (expressao)


State 55

   47 termo: fator •

    $default  reduce using rule 47 (termo)


State 56

   38 atribuicao: IDENTIFIER OP_ADD_ASSIGN expressao •
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD  shift, and go to state 74
    OP_SUB  shift, and go to state 75
    OP_EQ   shift, and go to state 76
    OP_NE   shift, and go to state 77
    OP_LT   shift, and go to state 78
    OP_GT   shift, and go to state 79

    $default  reduce using rule 38 (atribuicao)


State 57

   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo
   65 lista_argumentos: expressao •

    OP_ADD  shift, and go to state 74
    OP_SUB  shift, and go to state 75
    OP_EQ   shift, and go to state 76
    OP_NE   shift, and go to state 77
    OP_LT   shift, and go to state 78
    OP_GT   shift, and go to state 79

    $default  reduce using rule 65 (lista_argumentos)


State 58

   58 chamada_funcao: IDENTIFIER DELIM_PAREN_OPEN argumentos • DELIM_PAREN_CLOSE

    DELIM_PAREN_CLOSE  shift, and go to state 82


State 59

   64 argumentos: lista_argumentos •
   66 lista_argumentos: lista_argumentos • DELIM_SEPARATOR expressao

    DELIM_SEPARATOR  shift, and go to state 83

    $default  reduce using rule 64 (argumentos)


State 60

   37 atribuicao: IDENTIFIER DELIM_BRACKET_OPEN expressao • DELIM_BRACKET_CLOSE OP_ASSIGN expressao
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD               shift, and go to state 74
    OP_SUB               shift, and go to state 75
    OP_EQ                shift, and go to state 76
    OP_NE                shift, and go to state 77
    OP_LT                shift, and go to state 78
    OP_GT                shift, and go to state 79
    DELIM_BRACKET_CLOSE  shift, and go to state 84


State 61

   30 comando_check: CTRL_CHECK DELIM_PAREN_OPEN expressao • DELIM_PAREN_CLOSE CTRL_THEN bloco
   31              | CTRL_CHECK DELIM_PAREN_OPEN expressao • DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD             shift, and go to state 74
    OP_SUB             shift, and go to state 75
    OP_EQ              shift, and go to state 76
    OP_NE              shift, and go to state 77
    OP_LT              shift, and go to state 78
    OP_GT              shift, and go to state 79
    DELIM_PAREN_CLOSE  shift, and go to state 85


State 62

   32 comando_repeat: CTRL_REPEAT CTRL_WHILE DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE bloco

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 86
    termo      go to state 54
    fator      go to state 55


State 63

   34 comando_give: CTRL_GIVE CTRL_BACK DELIM_END_STATEMENT •

    $default  reduce using rule 34 (comando_give)


State 64

   33 comando_give: CTRL_GIVE CTRL_BACK expressao • DELIM_END_STATEMENT
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD               shift, and go to state 74
    OP_SUB               shift, and go to state 75
    OP_EQ                shift, and go to state 76
    OP_NE                shift, and go to state 77
    OP_LT                shift, and go to state 78
    OP_GT                shift, and go to state 79
    DELIM_END_STATEMENT  shift, and go to state 87


State 65

   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo
   59 chamada_funcao: "print" DELIM_PAREN_OPEN expressao • DELIM_PAREN_CLOSE

    OP_ADD             shift, and go to state 74
    OP_SUB             shift, and go to state 75
    OP_EQ              shift, and go to state 76
    OP_NE              shift, and go to state 77
    OP_LT              shift, and go to state 78
    OP_GT              shift, and go to state 79
    DELIM_PAREN_CLOSE  shift, and go to state 88


State 66

   61 acesso_variavel: IDENTIFIER •
   62                | IDENTIFIER • DELIM_BRACKET_OPEN expressao DELIM_BRACKET_CLOSE

    DELIM_BRACKET_OPEN  shift, and go to state 89

    $default  reduce using rule 61 (acesso_variavel)


State 67

   60 chamada_funcao: "scan" DELIM_PAREN_OPEN acesso_variavel • DELIM_PAREN_CLOSE

    DELIM_PAREN_CLOSE  shift, and go to state 90


State 68

    9 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DECL_AS expressao • DELIM_END_STATEMENT
   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo

    OP_ADD               shift, and go to state 74
    OP_SUB               shift, and go to state 75
    OP_EQ                shift, and go to state 76
    OP_NE                shift, and go to state 77
    OP_LT                shift, and go to state 78
    OP_GT                shift, and go to state 79
    DELIM_END_STATEMENT  shift, and go to state 91


State 69

   10 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT • DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    DELIM_BRACKET_CLOSE  shift, and go to state 92


State 70

   13 declaracao_funcao: DECL_FUNCTION tipo IDENTIFIER $@2 DELIM_PAREN_OPEN • parametros $@3 DELIM_PAREN_CLOSE bloco

    TYPE_INT   shift, and go to state 11
    TYPE_FLT   shift, and go to state 12
    TYPE_CHR   shift, and go to state 13
    TYPE_STR   shift, and go to state 14
    TYPE_VOID  shift, and go to state 15

    $default  reduce using rule 14 (parametros)

    parametros        go to state 93
    lista_parametros  go to state 94
    parametro         go to state 95
    tipo              go to state 96


State 71

   57 fator: IDENTIFIER DELIM_PAREN_OPEN • argumentos DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    $default  reduce using rule 63 (argumentos)

    expressao         go to state 57
    termo             go to state 54
    fator             go to state 55
    argumentos        go to state 97
    lista_argumentos  go to state 59


State 72

   51 fator: IDENTIFIER DELIM_BRACKET_OPEN • expressao DELIM_BRACKET_CLOSE

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 52

    expressao  go to state 98
    termo      go to state 54
    fator      go to state 55


State 73

   41 expressao: expressao • OP_ADD termo
   42          | expressao • OP_SUB termo
   43          | expressao • OP_GT termo
   44          | expressao • OP_LT termo
   45          | expressao • OP_EQ termo
   46          | expressao • OP_NE termo
   56 fator: DELIM_PAREN_OPEN expressao • DELIM_PAREN_CLOSE

    OP_ADD             shift, and go to state 74
    OP_SUB             shift, and go to state 75
    OP_EQ              shift, and go to state 76
    OP_NE              shift, and go to state 77
    OP_LT              shift, and go to state 78
    OP_GT              shift, and go to state 79
    DELIM_PAREN_CLOSE  shift, and go to state 99


State 74

   41 expressao: expressao OP_ADD • termo

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 100

    termo  go to state 101
    fator  go to state 55


State 75

   42 expressao: expressao OP_SUB • termo

    IDENTIFIER        shift, and go to state 47
    DELIM_PAREN_OPEN  shift, and go to state 48
    LITERAL_INT       shift, and go to state 49
    LITERAL_FLT       shift, and go to state 50
    LITERAL_CHR       shift, and go to state 51
    LITERAL_STR       shift, and go to state 100

    termo  go to state 102
    fator  go to state 55


State 76
